# Lab6_Prim6

./: CMakeLists.txt  README.md  input.txt  laba6_Prim6.cpp  output.txt
inc/: SomeFunctions.hpp
src/: SomeFunctions.cpp
